err/dysl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dysl'...
Listing './lib/python3.5/site-packages/dysl/corpora'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-5langs'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/cinema'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/cinema/ar'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/cinema/en'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/cinema/es'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/cinema/pt'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/egypt'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/egypt/ar'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/egypt/en'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/egypt/es'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/egypt/pt'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/gvo'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/gvo/ar'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/gvo/en'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/gvo/es'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/gvo/pt'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/internet'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/internet/ar'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/internet/en'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/internet/es'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren/internet/pt'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren.test'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren.test/ar'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren.test/en'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren.test/es'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpus-esaren.test/unk'...
Listing './lib/python3.5/site-packages/dysl/corpora/corpuslib'...
Compiling './lib/python3.5/site-packages/dysl/corpora/corpuslib/test.py'...
***   File "./lib/python3.5/site-packages/dysl/corpora/corpuslib/test.py", line 55
    print 'incorrect:'
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dysl/corpora/corpuslib/train.py'...
***   File "./lib/python3.5/site-packages/dysl/corpora/corpuslib/train.py", line 45
    print "Warning: Cannot add training samples to builtin training-set."
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dysl/dysl.py'...
***   File "./lib/python3.5/site-packages/dysl/dysl.py", line 38
    print 'Training on language,', lang
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dysl/dyslib'...
Compiling './lib/python3.5/site-packages/dysl/dyslib/lm.py'...
***   File "./lib/python3.5/site-packages/dysl/dyslib/lm.py", line 59
    print '\nUnseen n-grams as per actual doc_ids'
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dysl/langid.py'...
***   File "./lib/python3.5/site-packages/dysl/langid.py", line 138
    print text_in, '[ Language:', lang_res, ']'
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dysl-0.13.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
